Ubercart 3.x, xxxx-xx-xx (development version)
------------------------
- API:
    * uc_order_load_line_items() returns stored and calculated line items together.

Ubercart 3.0-beta4, 2011-7-25
-----------------------------
- API:
    * Removed ability to disable order logging.
    * Removed the ability to disable payment logging or tracking.
    * Off-site payment methods can specify simpler redirect forms.
    * Payment gateways are now only used and supported by uc_credit.
    * Ordered product titles increased from 128 to 255 characters.
    * The following hooks are now keyed by ID, though backwards compatibility is kept:
      * hook_uc_cart_pane()
      * hook_uc_checkout_pane()
      * hook_uc_line_item()
      * hook_uc_payment_gateway()
      * hook_uc_payment_method()
      * hook_uc_order_pane()
      * hook_uc_order_state()
    * Added hook_uc_order_pane_alter().
    * Removed settings form summaries.
- Theme:
    * Improved theming of printable invoices.
    * Shipping options theme functions for UPS and USPS include number of packages being sent.
    * Added CSS classes for payment methods.
- UI:
    * Converted 'create order' page to Ajax.
    * Many settings pages overhauled and simplified.
    * Converted cart, checkout and order pane admin to use drag and drop ordering.
    * Converted payment method and shipping quotes to use drag and drop ordering.
    * Country names are fully translatable.
- Misc:
    * Product field ordering is handled by standard field display management.
    * Added option to allow anonymous checkouts to use an existing email address.
    * Automatic deletion of generated shipping labels.
    * Product tokens are [product: ... ] instead of [node: ... ].
    * Added additional "value" tokens for numeric prices.
    * Changed [uc_order:number] token to [uc_order:order-number].
    * Added some SimpleTests.
    * Numerous documentation fixes and improvements.
    * A multitude of bug fixes.

Ubercart 3.0-beta3, 2011-5-26