@@ -492,9 +492,7 @@ function uc_payment_enter($order_id, $method, $amount, $uid = 0, $data = NULL, $
   $account = user_load($uid);
 
   module_invoke_all('uc_payment_entered', $order, $method, $amount, $account, $data, $comment);
-  if (module_exists('rules')) {
-    rules_invoke_event('uc_payment_entered', $order, $account);
-  }
+  rules_invoke_event('uc_payment_entered', $order, $account);
 }
 
 /**
