@@ -94,12 +94,10 @@ function uc_flatrate_admin_method_edit_form($form, &$form_state, $mid = 0) {
     '#field_suffix' => $sign_flag ? $currency_sign : '',
   );
 
-  if (module_exists('rules')) {
-    $conditions = rules_config_load('get_quote_from_flatrate_' . $mid);
-    if ($conditions) {
-      RulesPluginUI::$basePath = 'admin/config/workflow/rules/components';
-      $conditions->form($form, $form_state);
-    }
+  $conditions = rules_config_load('get_quote_from_flatrate_' . $mid);
+  if ($conditions) {
+    RulesPluginUI::$basePath = 'admin/config/workflow/rules/components';
+    $conditions->form($form, $form_state);
   }
 
   $form['actions'] = array('#type' => 'actions');
@@ -168,9 +166,7 @@ function uc_flatrate_admin_method_edit_form_submit($form, &$form_state) {
     variable_set('uc_quote_method_weight', $weight);
 
     // Ensure Rules picks up the new condition.
-    if (module_exists('rules')) {
-      entity_flush_caches();
-    }
+    entity_flush_caches();
 
     drupal_set_message(t('Created and enabled new flat rate shipping method.'));
   }
@@ -212,9 +208,7 @@ function uc_flatrate_admin_method_confirm_delete_submit($form, &$form_state) {
     ->condition('mid', $mid)
     ->execute();
 
-  if (module_exists('rules')) {
-    rules_config_delete(array('get_quote_from_flatrate_' . $mid));
-  }
+  rules_config_delete(array('get_quote_from_flatrate_' . $mid));
 
   $enabled = variable_get('uc_quote_enabled', array());
   unset($enabled['flatrate_' . $mid]);
