@@ -55,15 +55,8 @@ function uc_quote_assemble_quotes($order) {
 
   $quote_data = array();
   foreach ($methods as $method) {
-    if (module_exists('rules')) {
-      $set = rules_config_load('get_quote_from_' . $method['id']);
-      $apply = !$set || $set->execute($order);
-    }
-    else {
-      $apply = TRUE;
-    }
-
-    if ($apply) {
+    $set = rules_config_load('get_quote_from_' . $method['id']);
+    if (!$set || $set->execute($order)) {
       $data = uc_quote_action_get_quote($order, $method);
 
       foreach ($data as &$quote) {
