@@ -614,9 +614,7 @@ function uc_shipping_shipment_save($shipment) {
 
   module_invoke_all('uc_shipment', 'save', $shipment);
   $order = uc_order_load($shipment->order_id);
-  if (module_exists('rules')) {
-    rules_invoke_event('uc_shipment_save', $order, $shipment);
-  }
+  rules_invoke_event('uc_shipment_save', $order, $shipment);
 }
 
 /**
