@@ -52,18 +52,16 @@ function uc_usps_admin_settings($form, &$form_state) {
     '#description' => t('Select the USPS services that are available to customers. Be sure to include the services that the Postal Service agrees are available to you.'),
   );
 
-  if (module_exists('rules')) {
-    $form['domestic']['env_conditions'] = array(
-      '#type' => 'fieldset',
-      '#title' => t('Envelope service conditions'),
-      '#collapsible' => TRUE,
-      '#collapsed' => TRUE,
-    );
-    $conditions = rules_config_load('get_quote_from_usps_env');
-    if ($conditions) {
-      RulesPluginUI::$basePath = 'admin/config/workflow/rules/components';
-      $conditions->form($form['domestic']['env_conditions'], $form_state);
-    }
+  $form['domestic']['env_conditions'] = array(
+    '#type' => 'fieldset',
+    '#title' => t('Envelope service conditions'),
+    '#collapsible' => TRUE,
+    '#collapsed' => TRUE,
+  );
+  $conditions = rules_config_load('get_quote_from_usps_env');
+  if ($conditions) {
+    RulesPluginUI::$basePath = 'admin/config/workflow/rules/components';
+    $conditions->form($form['domestic']['env_conditions'], $form_state);
   }
 
   $form['domestic']['uc_usps_services'] = array(
@@ -74,18 +72,16 @@ function uc_usps_admin_settings($form, &$form_state) {
     '#description' => t('Select the USPS services that are available to customers. Be sure to include the services that the Postal Service agrees are available to you.'),
   );
 
-  if (module_exists('rules')) {
-    $form['domestic']['parcel_conditions'] = array(
-      '#type' => 'fieldset',
-      '#title' => t('Parcel service conditions'),
-      '#collapsible' => TRUE,
-      '#collapsed' => TRUE,
-    );
-    $conditions = rules_config_load('get_quote_from_usps');
-    if ($conditions) {
-      RulesPluginUI::$basePath = 'admin/config/workflow/rules/components';
-      $conditions->form($form['domestic']['parcel_conditions'], $form_state);
-    }
+  $form['domestic']['parcel_conditions'] = array(
+    '#type' => 'fieldset',
+    '#title' => t('Parcel service conditions'),
+    '#collapsible' => TRUE,
+    '#collapsed' => TRUE,
+  );
+  $conditions = rules_config_load('get_quote_from_usps');
+  if ($conditions) {
+    RulesPluginUI::$basePath = 'admin/config/workflow/rules/components';
+    $conditions->form($form['domestic']['parcel_conditions'], $form_state);
   }
 
   $form['international'] = array(
@@ -104,18 +100,16 @@ function uc_usps_admin_settings($form, &$form_state) {
     '#description' => t('Select the USPS services that are available to customers. Be sure to include the services that the Postal Service agrees are available to you.'),
   );
 
-  if (module_exists('rules')) {
-    $form['international']['env_conditions'] = array(
-      '#type' => 'fieldset',
-      '#title' => t('Envelope service conditions'),
-      '#collapsible' => TRUE,
-      '#collapsed' => TRUE,
-    );
-    $conditions = rules_config_load('get_quote_from_usps_intl_env');
-    if ($conditions) {
-      RulesPluginUI::$basePath = 'admin/config/workflow/rules/components';
-      $conditions->form($form['international']['env_conditions'], $form_state);
-    }
+  $form['international']['env_conditions'] = array(
+    '#type' => 'fieldset',
+    '#title' => t('Envelope service conditions'),
+    '#collapsible' => TRUE,
+    '#collapsed' => TRUE,
+  );
+  $conditions = rules_config_load('get_quote_from_usps_intl_env');
+  if ($conditions) {
+    RulesPluginUI::$basePath = 'admin/config/workflow/rules/components';
+    $conditions->form($form['international']['env_conditions'], $form_state);
   }
 
   $form['international']['uc_usps_intl_services'] = array(
@@ -126,18 +120,16 @@ function uc_usps_admin_settings($form, &$form_state) {
     '#description' => t('Select the USPS services that are available to customers. Be sure to include the services that the Postal Service agrees are available to you.'),
   );
 
-  if (module_exists('rules')) {
-    $form['international']['parcel_conditions'] = array(
-      '#type' => 'fieldset',
-      '#title' => t('Parcel service conditions'),
-      '#collapsible' => TRUE,
-      '#collapsed' => TRUE,
-    );
-    $conditions = rules_config_load('get_quote_from_usps_intl');
-    if ($conditions) {
-      RulesPluginUI::$basePath = 'admin/config/workflow/rules/components';
-      $conditions->form($form['international']['parcel_conditions'], $form_state);
-    }
+  $form['international']['parcel_conditions'] = array(
+    '#type' => 'fieldset',
+    '#title' => t('Parcel service conditions'),
+    '#collapsible' => TRUE,
+    '#collapsed' => TRUE,
+  );
+  $conditions = rules_config_load('get_quote_from_usps_intl');
+  if ($conditions) {
+    RulesPluginUI::$basePath = 'admin/config/workflow/rules/components';
+    $conditions->form($form['international']['parcel_conditions'], $form_state);
   }
 
   // Container for quote options
