@@ -2,7 +2,6 @@ name = File Downloads
 description = Allows products to be associated with downloadable files.
 dependencies[] = uc_product
 dependencies[] = uc_order
-dependencies[] = rules
 package = "Ubercart - core (optional)"
 core = 7.x
 stylesheets[all][] = uc_file.css
