@@ -1,5 +1,6 @@
 name = Order
 description = REQUIRED. Receive and manage orders through your website.
+dependencies[] = rules
 package = Ubercart - core
 core = 7.x
 files[] = uc_order.module
