@@ -1555,9 +1555,7 @@ function uc_order_update_status($order_id, $status) {
     uc_order_log_changes($order->order_id, $change);
 
     $updated = uc_order_load($order_id, TRUE);
-    if (module_exists('rules')) {
-      rules_invoke_event('uc_order_status_update', $order, $updated);
-    }
+    rules_invoke_event('uc_order_status_update', $order, $updated);
 
     return TRUE;
   }
