@@ -2,7 +2,6 @@ name = Roles
 description = Assign permanent or expirable roles based on product purchases.
 dependencies[] = uc_product
 dependencies[] = uc_order
-dependencies[] = rules
 package = "Ubercart - core (optional)"
 core = 7.x
 stylesheets[all][] = uc_roles.css
