@@ -3,7 +3,6 @@ description = Manage stock levels of your Ubercart products
 dependencies[] = uc_product
 dependencies[] = uc_reports
 dependencies[] = uc_store
-dependencies[] = rules
 package = "Ubercart - extra"
 core = 7.x
 files[] = views/uc_stock_views_handler_filter_below_threshold.inc
