@@ -2,6 +2,8 @@ Ubercart 3.x, xxxx-xx-xx (development version)
 ------------------------
 - API:
     * uc_order_load_line_items() returns stored and calculated line items together.
+- Misc:
+    * Restored dependence on Rules.
 
 Ubercart 3.0-beta4, 2011-7-25
 -----------------------------
@@ -189,4 +191,3 @@ Ubercart 3.0-alpha1, 2010-04-14
 - Files:
     * Shipment labels are now managed files.
     * Catalog term images are now managed files in the {file} table.
-
